// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders root class if not the active Thumbnail 1`] = `
<button
  className="root"
  onClick={[Function]}
>
  <img
    alt="test-thumbnail"
    className="root notLoaded"
    classes={
      Object {
        "root": "image",
      }
    }
    onError={[Function]}
    onLoad={[Function]}
    src="/media/catalog/product/thumbnail.png?auto=webp&format=pjpg&width=240&height=300"
  />
  <img
    alt="test-thumbnail"
    className="root"
    classes={
      Object {
        "root": "image",
      }
    }
    src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAQAAAAFCAQAAADIpIVQAAAADklEQVR42mNkgAJGIhgAALQABsHyMOcAAAAASUVORK5CYII="
  />
</button>
`;

exports[`renders the Thumbnail component correctly 1`] = `
<button
  className="rootSelected"
  onClick={[Function]}
>
  <img
    alt="test-thumbnail"
    className="root notLoaded"
    classes={
      Object {
        "root": "image",
      }
    }
    onError={[Function]}
    onLoad={[Function]}
    src="/media/catalog/product/thumbnail.png?auto=webp&format=pjpg&width=240&height=300"
  />
  <img
    alt="test-thumbnail"
    className="root"
    classes={
      Object {
        "root": "image",
      }
    }
    src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAQAAAAFCAQAAADIpIVQAAAADklEQVR42mNkgAJGIhgAALQABsHyMOcAAAAASUVORK5CYII="
  />
</button>
`;

exports[`renders transparent placeholder when no file name is provided 1`] = `
<button
  className="rootSelected"
  onClick={[Function]}
>
  <img
    alt="placeholder-thumbnail"
    className="root notLoaded"
    classes={
      Object {
        "root": "image",
      }
    }
    onError={[Function]}
    onLoad={[Function]}
    src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAQAAAAFCAQAAADIpIVQAAAADklEQVR42mNkgAJGIhgAALQABsHyMOcAAAAASUVORK5CYII="
  />
  <img
    alt="placeholder-thumbnail"
    className="root"
    classes={
      Object {
        "root": "image",
      }
    }
    src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAQAAAAFCAQAAADIpIVQAAAADklEQVR42mNkgAJGIhgAALQABsHyMOcAAAAASUVORK5CYII="
  />
</button>
`;
